XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__SubscriptionRatePlan__c.object
<CustomObject>
    <description>Rate plans represent a price or a collection of prices for a service you sell.</description>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription Rate Plans</relationshipLabel>
        <relationshipName>Subscription_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AmendmentId__c</fullName>
        <description>The ID of the amendment associated with the rate plan. This field only applies to amendment rate plans.</description>
        <label>Amendment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AmendmentSubscriptionRatePlanId__c</fullName>
        <description>The ID of the subscription rate plan modified by the amendment. This field only applies to amendment rate plans.</description>
        <label>Amendment Subscription Rate Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AmendmentType__c</fullName>
        <description>The type of amendment associated with the rate plan. This field only applies to amendment rate plans.</description>
        <label>Amendment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__OriginalProductRatePlanId__c</fullName>
        <description>The ID of the original product rate plan.</description>
        <label>Original Product Rate Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalSubscriptionRatePlanId__c</fullName>
        <externalId>true</externalId>
        <label>Original Subscription Rate Plan Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__ProductRatePlanId__c</fullName>
        <label>Product Rate Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlanName__c</fullName>
        <description>Full rate plan name.</description>
        <label>Subscription Rate Plan Name (Long Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Subscription__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Subscription Rate Plans</relationshipLabel>
        <relationshipName>Subscription_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription Rate Plan</label>
    <nameField>
        <label>Subscription Rate Plan Name (Short Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Rate Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>